Updated winning pop up and front card color

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                         if(document.querySelectorAll('.cardMatch').length == emojis.length) {
 
-                            alert('Win!');
+                            alert('You win!');
 
                         } else {
                             document.querySelectorAll('.cardOpen')[1].classList.remove('cardOpen');
